[package]
name = "learning-halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "halo2_examples"
path = "src/lib.rs"

[[bench]]
name = "add_scalar"
harness = false

# [features]
# dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
# halo2_proofs = { version= "0.3.0", features = ["dev-graph", "plotters"] }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20", features = ["dev-graph", "plotters"]  }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }
# rand_core = { version = "0.6", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
blake2b_simd = "1"
# halo2_proofs = { version = "0.1", features = ["attributes"]}
# halo2_gadgets = "0.3.0"
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"
# plotters = { version = "0.3.0", optional = true }
# tabbycat = { version = "0.1", features = ["attributes"], optional = true }
plotters = { version = "0.3.0"}
tabbycat = { version = "0.1", features = ["attributes"]}

[dev-dependencies]
criterion = "0.5.1"
